# Clippy

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.pytest_tmp/test_build_karaoke_ass0/: c.ass
.pytest_tmp/test_golden_roundtrip0/: labels.json
.pytest_tmp/test_run_eval_writes_report0/: candidates.json  eval_report.json
MAYBEUSEFUL/video-editor-main/: README.md  package.json  pnpm-lock.yaml
docs/: M1-baseline.md  autonomy-charter.md
docs/adr/: 0001-local-first-pipeline.md  0002-two-pass-selection-engine.md  0003-human-eval-loop.md  0004-per-job-preferences.md  0005-external-performance-loop.md  0006-semantic-timeline-ui.md  0007-multi-profile-platform.md  README.md  template.md
docs/handoff/: 2026-07-03.md
docs/plans/: 2026-06-20-m1-eval-loop.md  2026-06-20-m2-selection-engine.md
docs/roadmap/: 2026-Q3.md
docs/specs/: 2026-06-18-video-clipper-design.md  2026-06-20-clip-selection-quality-design.md
scripts/: make_fake_transcript.py
src/video_clipper/: __init__.py  captions.py  cli.py  clip_utils.py  config.py  content_profile.py  eval.py  export_names.py  few_shot.py  ingest.py  (+20 more)
tests/: test_autonomy_features.py  test_caption_preview.py  test_captions.py  test_chunking_boundaries.py  test_clip_utils.py  test_eval.py  test_export_names.py  test_few_shot.py  test_job_status.py  test_models_golden.py  test_pipeline_propose.py  test_pipeline_propose_prefs.py  test_propose_prefs.py  test_ranker.py  test_reframe.py  test_render_prefs.py  test_review_golden.py  test_router_tasks.py  test_rubric.py  test_scoring.py  test_selection_hookfirst.py  test_storage_golden.py  test_transcript_chunks.py
(+18 files in other folders)
